--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://admin:ibra@cluster0.hmcxx.gcp.mongodb.net/<dbname>?retryWrites=true&w=majority
+//add your Atlas URI with your username and password.
